fix: change description

--- a/plugins/written-numbers/manifest.json
+++ b/plugins/written-numbers/manifest.json
@@ -1,6 +1,6 @@
 {
 	"name": "Written Numbers",
-	"description": "A plugin for use as a template.",
+	"description": "Makes numbers written.",
 	"authors": [
 		{
 			"name": "Kyza",
